Tarefa Quantitity: Criando os adapters.